--- a/content/contact-info.Rmd
+++ b/content/contact-info.Rmd
@@ -4,11 +4,10 @@
 
 | Center | Left |
 |:------:|:-----|
-| <i class="fas fa-map-marker-alt"></i>|Department of Computer Science,\
-University of Oxford, Oxford, UK|
-| <i class="fas fa-envelope"></i> | ulrik.lyngs\@cs.ox.ac.uk |
-| <i class="fas fa-globe"></i> | [ulriklyngs.com](https://ulriklyngs.com) |
-| <i class="fab fa-github"></i> | [ulyngs](https://github.com/ulyngs/) |
+| <i class="fa fa-phone"></i> | +1 859-489-1926 |
+| <i class="fas fa-envelope"></i> | nmcglincy\@zymergen.com |
+| <i class="fab fa-linkedin"></i> | [nmcglincy](https://www.linkedin.com/in/nmcglincy/) |
+| <i class="fab fa-github"></i> | [nmcglincy](https://github.com/nmcglincy/) |
 
 </div>
 ```
